# maho-bot

./: .coveragerc  .gitignore  .travis.yml  Dockerfile  LICENSE  Pipfile  README.md  deploy_rsa.enc  docker-compose.yml  pyproject.toml  pytest.ini  restart.sh  scripts.py  setup.py
.github/workflows/: ci-cd.yml
scripts/: example_config  maho
secrets/: static.tar.enc
src/maho/: __init__.py  checks.py  config.py  main.py  model.py  models.py  utils.py
src/maho/cogs/: festive.py  maho.py  markov.py  utils.py
src/maho/fixtures/: festive.yml
src/maho/modules/: __init__.py  festive.py  maho.py  markov.py  utils.py
tests/: conftest.py  test_festive.py  test_markov.py  test_misc.py  test_models.py  test_utils.py
