[tool.poetry]
name = "maho"
version = "0.1.0"
description = "Discord Bot with various utility functions"
authors = ["Rain <Rain#8710>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
discord = "^1.0.1"
click = "^7.0"
inquirer = "^2.6.3"
pyyaml = "^5.2"
peewee = "^3.13.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.3.2"
pytest-cov = "^2.8.1"
flake8 = "^3.7.9"
flake8-docstrings = "^1.5.0"
rope = "^0.14.0"
pytest-flake8 = "^1.0.4"
pytest-env = "^0.6.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
