[tool.poetry]
name = "maho"
version = "0.2.0"
description = "Discord Bot with various utility functions"
authors = ["Rain <Rain#8710>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"
inquirer = "^2.7.0"
pyyaml = "^5.4.1"
peewee = "^3.14.1"
"discord.py" = "^1.6.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
flake8-docstrings = "^1.5.0"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-flake8 = "^1.0.7"
pytest-env = "^0.6.2"

[tool.poetry.scripts]
config = "scripts:config"
start = "scripts:start"
test = "scripts:test"
init-db = "scripts:init_db"

[tool.coverage.run]
source = ["src/maho"]
omit = ["src/maho/main.py"]

[tool.coverage.report]
fail_under = 80

[tool.pytest.ini_options]
flake8-max-line-length = 90
testpaths = ["src", "tests"]
addopts = [
    "--flake8", "--cov",
    "--cov-report=term",
]
env = ["BOT_DB=:memory:"]
log_level = "ERROR"

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"
